assets/scss/_styles_project.scss
/* ... */
.td-page-meta {
  a {
    display: block;
    color: $gray-400;
    line-height: 1.65rem;
    font-weight: $font-weight-medium;

    &:hover {
      color: $white;
      text-decoration: none;
    }
  }

  .td-page-meta--project-issue {
    visibility: hidden;
  }
}

.td-toc {
  margin-top: 2rem;

  #TableOfContents {
    a {
      color: $lightslategray;

      &:hover {
        color: $white;
        text-decoration: none;
      }
    }
  }
}

// pageinfo
.pageinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Open Sans";
  border-style: solid;
  border-color: #00b39f;
}

// front-matter
.matterinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Qanelas Soft";
  border-color: #00b39f;
  border-radius: 10px;
}

.heading {
  font-size: 1.2rem;
  color: #00b39f;
}

.matterheader {
  font-size: 1.2rem;
  color: $casper;
}

.matterinfo .plan-support {
  padding: .5rem;
  border: .5px solid $border-color;
  display: flex;
  align-items: center;
  color: $casper;
  &:hover {
    background-color: rgba($primary, 0.3)
  }
}

.matterinfo .plan-support .support-icon {
  width: 20px;
  height: 20px;
  margin-right: 10px;
}

.plan-icon {
  display: inline-block;
}

.tier {
  font-weight: bold;
  padding: 0 5px;
  color: $casper;
}


// Style alert boxes.

.alert {
  font-weight: $font-weight-medium;
  background: $gray-900;
  color: inherit;
  border-radius: 0;

  &.alert-custom {
    background-color: $gray-900;
    border-style: solid;
    border-width: 0 0 0 4px;
  }
}

// Dashboard

.l5btn {
  padding: 1.25rem;
  border-radius: 0.75rem;
  border: 4px solid rgba(0, 179, 159, 0.4);
  background: #000;
  color: $white;
  transition: color 0.8s;
  transition: background-color 0.8s;

  >img {
    width: 2rem;
    margin-right: 0.5rem;
  }

  >img:hover {
    filter: brightness(0) invert(1);
  }

  @media (max-width: 768px) {
    width: 277px;
  }
}

.td-content figure,
.td-content figure {
  width: max-content;
  max-width: clamp(320px, 100%, 700px);
  margin: 0 auto 2rem auto;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.td-content figure > img {
  width: auto;
  max-width: 100%;
  border-radius: .5rem .5rem 0 0;
  box-shadow: 0 0 0.5rem rgba(0, 179, 159, 0.4);
  transition: box-shadow 0.2s;
}

.td-content figure > figcaption {
  width: 100%;
  text-align: center;
  padding: 0.5rem 1rem;
  background-color: rgba($lightslategray, 1);
  color: $dark;
  border-radius: 0 0 .5rem .5rem;
  box-sizing: border-box;
}

.dashboard {
  font-weight: 800;
  margin-bottom: 4rem;
  font-size: 5rem;
  text-align: left;
  background-image: 
    linear-gradient(to right, rgba(255, 255, 255, .9) 0px, rgb(0, 211, 169) 34%, rgb(235, 192, 23) 71%, rgb(255,243,197) 100%);
  background-position:
    0% 0%,
    0% 0%;
  background-size: 200%;
  box-sizing: auto;
  color: transparent;
  display: block;
  text-rendering: optimizelegibility;
  background-clip: text;
  -webkit-background-clip: text;
  animation: color-shift 8s linear infinite;

  @media (max-width: 768px) {
    font-size: 3.5rem;
    text-align: center;
  }

  // @media (max-width:1200px){
  // }
}

@keyframes color-shift {
  to {
    background-position: -200%;
  }
}


.dash-tangle {
  width: 78.14231rem;
  height: 74.72rem;
  transform: rotate(-55.68deg);
  flex-shrink: 0;
  overflow: hidden;
  background-image: linear-gradient(180deg,
      rgba(0, 179, 115, 0) 0%,
      rgba(0, 179, 159, 0.3) 100%);
  position: absolute;
  top: -18rem;
  right: -32rem;
  z-index: -5;
  background-clip: content-box;
  -webkit-background-clip: padding-box;

  @media (max-width: 1440px) {
    top: -5rem;
    right: -28rem;
    position: fixed;
  }

  @media (max-width: 768px) {
    width: 129.14rem;
    top: 7rem;
    right: -70rem;
    position: fixed;
  }
}

.dash-ircle-container {
  height: calc(74.125rem - 8rem);
  position: absolute;
  top: 8rem;
  left: -24rem;
  overflow: hidden;

  >.dash-ircle {
    width: 74.125rem;
    height: 74.125rem;
    flex-shrink: 0;
    background: radial-gradient(50% 50% at 50% 50%,
        rgba(0, 179, 159, 0.2) 0%,
        rgba(0, 179, 159, 0) 100%);
    position: absolute;
    overflow: hidden;
    background-clip: border-box;

    z-index: -5;
  }
}

@keyframes tipsy {
  0% {
    transform: translateX(-50%) translateY(-50%) rotate(0deg);
  }

  100% {
    transform: translateX(-50%) translateY(-50%) rotate(360deg);
  }
}

.dash-sign-container {
  display: flex;
  align-items: center;
  justify-content: space-between; 
  text-align: right;

  h1.dashboard {
    max-width: 40%;        
    text-align: left;
    flex-shrink: 0;       
  }

  @media (max-width: 768px) {
    flex-wrap: wrap;
    justify-content: center;

    h1.dashboard {
      max-width: 100%;
      text-align: center;
    }
  }

  a.dash-sign {
    color: #fffbf1;
    text-shadow:
      0 20px 25px #2e2e31,
      0 40px 60px #2e2e31;
    font-size: 28px;
    font-weight: 600;
    text-decoration: none;
    letter-spacing: 0px;
    position: relative;
    width: auto;
    white-space: nowrap;
    padding: 2rem;
    margin: 0;
    transform: translateX(0%) translateY(0%);

    &:hover {
      color: #EBC017;
    }

    @media (max-width: 768px) {
      margin: 2rem 0 0 0;
    }
  }

  a.dash-sign:before,
  a.dash-sign:after {
    content: "";
    padding: 0.9em 0.4em;
    position: absolute;
    left: 50%;
    width: 100%;
    top: 50%;
    display: block;
    border: 8px solid $primary;
    transform: translateX(-50%) translateY(-50%) rotate(0deg);
    animation: 6s alternate ease-in-out tipsy;
  }

  a.dash-sign:before {
    border-color: $primary $secondary rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
    z-index: -1;
  }

  a.dash-sign:after {
    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) $primary $secondary;
    box-shadow: 25px 25px 25px rgba(46, 46, 49, 0.8);
  }

  a.dash-sign:visited {
    color: $white;
  }

  a.dash-sign:hover {
    color: #ebc017;
  }
}
/* ... */

